--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.699.0",
+    "@aws-sdk/client-dynamodb": "^3.699.0",
+    "@aws-sdk/lib-dynamodb": "^3.699.0",
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
     "express": "^4.21.1",
     "isbot": "^4.1.0",
+    "jotai": "^2.10.3",
+    "nanoid": "^5.0.8",
+    "qrcode.react": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.0",
